--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "google-translate-api": "^2.3.0",
     "mysql": "^2.16.0",
     "twit": "^2.2.10"
